<resources>
    <string name="app_name">HotKompoti</string>
    <string name="register">register</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="repeat_password">Repeat Password</string>
    <string name="hot_kompoti_logo">Hot Kompoti Logo</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="login">Login</string>
    <string name="log_out">log out</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="change_password">Change Password</string>
    <string name="send">Send</string>
    <string name="new_password">New Password</string>
    <string name="finish">finish</string>
</resources>