<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:padding="16dp"
    tools:context=".registration.ForgotActivity">

    <ImageView
        android:id="@+id/forgotLogo"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:contentDescription="@string/hot_kompoti_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/hot_kompoti_logo" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/forgotEmailContainer"
        style="@style/TextInputLayoutStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:textColorHint="@color/white"
        app:helperText="required"
        app:helperTextTextColor="@android:color/holo_red_dark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/forgotLogo">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/forgotEmail"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:lines="1"
            android:textColor="@color/white" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/sendResetButton"
        android:layout_marginTop="16dp"
        android:layout_marginHorizontal="96dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/send"
        app:layout_constraintTop_toBottomOf="@+id/forgotEmailContainer"/>


</androidx.constraintlayout.widget.ConstraintLayout>