<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:background="@color/black"
    tools:context=".registration.ChangePasswordActivity">

    <ImageView
        android:id="@+id/changePasswordLogo"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:contentDescription="@string/hot_kompoti_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/hot_kompoti_logo" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/changePasswordContainer"
        style="@style/TextInputLayoutStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="30dp"
        android:textColorHint="@color/white"
        app:counterEnabled="true"
        app:counterMaxLength="16"
        app:helperText="required"
        app:helperTextTextColor="@android:color/holo_red_dark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/changePasswordLogo"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/white">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/changePassword"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/new_password"
            android:inputType="textPassword"
            android:lines="1"
            android:maxLength="16"
            android:textColor="@color/white" />


    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/changeRepeatPasswordContainer"
        style="@style/TextInputLayoutStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="30dp"
        android:textColorHint="@color/white"
        app:counterEnabled="true"
        app:counterMaxLength="16"
        app:helperText="required"
        app:helperTextTextColor="@android:color/holo_red_dark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/changePasswordContainer"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/white">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/changeRepeatPassword"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/repeat_password"
            android:inputType="textPassword"
            android:lines="1"
            android:maxLength="16"
            android:textColor="@color/white" />


    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/changeFinishButton"
        android:layout_marginTop="16dp"
        android:layout_marginHorizontal="96dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/finish"
        app:layout_constraintTop_toBottomOf="@+id/changeRepeatPasswordContainer"/>

</androidx.constraintlayout.widget.ConstraintLayout>